infra/argocd/deployment-argocd-application-controller.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            requests:
              memory: "600Mi"
            limits:
              memory: "650Mi"
