infra/argocd/deployment-argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
        - name: argocd-server
          resources:
            requests:
              memory: "100Mi"
            limits:
              memory: "150Mi"
